fixed visibility on fullscreen div

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,6 +299,9 @@ footer p {
   bottom: 0;
 }
 
+#fullscreen-viewer.hidden{
+  display: none;
+}
 
 @media (prefers-color-scheme: dark) {
   body {
